[gd_scene load_steps=15 format=2]

[ext_resource path="res://example/2d/player/player.gd" type="Script" id=1]
[ext_resource path="res://addons/stray_combat_framework/src/combat/collision_detection/2d/hit_state_controller_2d.gd" type="Script" id=3]
[ext_resource path="res://addons/stray_combat_framework/src/combat/collision_detection/2d/hit_state_2d.gd" type="Script" id=4]
[ext_resource path="res://addons/stray_combat_framework/src/combat/combat_fsm.gd" type="Script" id=8]
[ext_resource path="res://addons/stray_combat_framework/src/input/input_detector.gd" type="Script" id=15]
[ext_resource path="res://addons/stray_combat_framework/src/combat/collision_detection/2d/hit_box_2d.gd" type="Script" id=17]

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [  ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "land",
"speed": 12.0
}, {
"frames": [  ],
"loop": true,
"name": "walk",
"speed": 30.0
} ]

[sub_resource type="Animation" id=20]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 15 ]
}

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 2.0
loop = true
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0, 15, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "idle" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitStateController2D/Idle/HurtBox:is_active")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=39]
resource_name = "walk_backward"
loop = true
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 17, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitStateController2D/Walk/HurtBox:is_active")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=40]
resource_name = "walk_forward"
loop = true
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 17 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitStateController2D/Walk/HurtBox:is_active")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 25, 53 )

[sub_resource type="RectangleShape2D" id=42]
extents = Vector2( 19.1188, 53 )

[sub_resource type="CapsuleShape2D" id=41]
radius = 18.7051
height = 64.9423

[node name="Player" type="RigidBody2D"]
mode = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 18 )
animation = "land"
playing = true
offset = Vector2( 5, -40 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 20 )
anims/idle = SubResource( 1 )
anims/walk_backward = SubResource( 39 )
anims/walk_forward = SubResource( 40 )

[node name="CombatFSM" type="Node" parent="."]
script = ExtResource( 8 )
anim_player = NodePath("../AnimationPlayer")

[node name="InputDetector" type="Node" parent="."]
script = ExtResource( 15 )

[node name="HitStateController2D" type="Node2D" parent="."]
visible = false
script = ExtResource( 3 )

[node name="Idle" type="Node2D" parent="HitStateController2D"]
visible = false
script = ExtResource( 4 )

[node name="HurtBox" type="Area2D" parent="HitStateController2D/Idle"]
visible = false
modulate = Color( 0, 0, 0, 1 )
monitoring = false
monitorable = false
script = ExtResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitStateController2D/Idle/HurtBox"]
shape = SubResource( 19 )

[node name="Walk" type="Node2D" parent="HitStateController2D"]
script = ExtResource( 4 )
is_active = true

[node name="HurtBox" type="Area2D" parent="HitStateController2D/Walk"]
modulate = Color( 0, 0, 0, 1 )
script = ExtResource( 17 )
is_active = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitStateController2D/Walk/HurtBox"]
position = Vector2( 8, 0 )
shape = SubResource( 42 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 41 )
__meta__ = {
"_editor_description_": "This collision shape is meant to collide with the world (floor, walls, etc.) PushBox2D exists to allow collision with other FighterBody2Ds"
}

[connection signal="state_changed" from="CombatFSM" to="." method="_on_CombatFSM_state_changed"]
[connection signal="input_detected" from="InputDetector" to="." method="_on_InputDetector_input_detected"]
